Made background image of intro responsive

--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
-                    <div class="collapse navbar-collapse navbar-left navbar-main-collapse">
-                        <ul class="nav navbar-nav">
-                            <li>
-                                <a class="page-scroll" href="resume/index.html">Resume</a>
-                            </li>
-                        </ul>
-                    </div>
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
+                        <li>
+                            <a class="page-scroll" href="resume/index.html">Resume</a>
+                        </li>
                         <li class="hidden">
                             <a href="#page-top"></a>
                         </li>
@@ -77,7 +73,7 @@
                         <div class="panel">
                             <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#F16">Software Developer | IGNIS Innovation | Fall 2016</a></p>
                             <div id="F16" class="panel-collapse collapse">
-                                For my fifth and most recent co-op term, I worked at <a href="httpL//www.ignisinnovation.com" target="_blank">IGNIS Innovation</a>, a small company in Waterloo that designs various technologies for AMOLED (Active Matrix Organic Light Emitting Diode) displays. At IGNIS I was primilarly focussed on application design.
+                                For my fifth and most recent co-op term, I worked at <a href="http://www.ignisinnovation.com" target="_blank">IGNIS Innovation</a>, a small company in Waterloo that designs various technologies for AMOLED (Active Matrix Organic Light Emitting Diode) displays. At IGNIS I was primilarly focussed on application design.
                                 <br><br>
                                 Working on IGNIS's product entitled <a href="http://www.ignisinnovation.com/maxlife/" target="_blank">Max | Life</a>, I was responsible for adding various features in both the WinForms and OpenGL aspects of the application. I designed and developed several new controls in C# to expand the funcionality of the application. In OpenGL I expanded several existing features to adapt to the changing needs of clients.
                             </div>
