minor fixes to interests section content

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="col-lg-6">
                         <div class="hovereffect">
                             <img src="engsoc.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events, </p></div>
+                            <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events and other volunteer roles.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -207,7 +207,7 @@
                     <div class="col-lg-6">
                         <div class="hovereffect">
                             <img src="fiddler_russians.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play as well as Fiddler on the Roof.</p></div>
+                            <div class="overlay"><p>In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play, Fiddler on the Roof, and The Music Man.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
