Added video of band

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="col-lg-6">
                         <div class="hovereffect">
                             <img src="guitar.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>Music has been a big part of my life for a long time - I'm most likely to be found playing in a band or messing around with some friends. I play guitar, piano, bass, drums and several other percussion instruments.</p></div>
+                            <div class="overlay"><p>Music has been a big part of my life for a long time - I'm most likely to be found <a href="https://drive.google.com/file/d/0B3lw0vFsNbkFNFgxbFRBYVBXU3M/view?usp=sharing" target="_blank">playing in a band</a> or messing around with some friends. I play guitar, piano, bass, drums and several other percussion instruments.</p></div>
                         </div>
                     </div>
                 </div>
