Updated year to 2017

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div id="W16" class="panel-collapse collapse">
                                 For my fourth co-op term, I worked at <a href="http://clearpath.ai" target="_blank">Clearpath Robotics</a>. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
                                 <br><br>
-                                At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. This included creating extensions to <a href="https://sentry.io">Sentry</a>, a crash reporting system, as well as several parsing and automation scripts. A significant project I completed was to design a failure monitoring system for Clearpath's robot fleet manager.
+                                At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. This included creating extensions to <a href="https://sentry.io" target="_blank">Sentry</a>, a crash reporting system, as well as several parsing and automation scripts. A significant project I completed was to design a failure monitoring system for Clearpath's robot fleet manager.
                             </div>
                         </div>
                         <div class="panel">
@@ -193,7 +193,7 @@
                     <div class="col-lg-6">
                         <div class="hovereffect">
                             <img src="engsoc.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events and other volunteer roles.</p></div>
+                            <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca" target="_blank">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events and other volunteer roles.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -229,7 +229,7 @@
         
         <footer>
             <div class="container text-center">
-                <p>Copyright &copy; Kieran Broekhoven 2016</p>
+                <p>Copyright &copy; Kieran Broekhoven 2017</p>
             </div>
         </footer>
         
