Restructured courses section

--- a/index.html
+++ b/index.html
@@ -121,66 +121,46 @@
             <h2 class="section-header">My courses</h2>
             <div class="courses-section">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <div class="term">
-                            <h4> 3B | Winter 2017 </h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME351" class="btn" target="_blank">ME 351: Fluid Mechanics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE322" class="btn" target="_blank">MTE 322: Electromechanical Machines</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE360" class="btn" target="_blank">MTE 360: Automatic Control Systems</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE380" class="btn" target="_blank">MTE 380: Mechatronics Design Workshop</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MSCI.html#MSCI261" class="btn" target="_blank">MSCI 261: Engineering Economics</a><br>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="term term-middle">
-                            <h4> 3A | Summer 2016 </h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ECE.html#ECE309" class="btn" target="_blank">ECE 309: Thermo & Heat Transfer</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME321" class="btn" target="_blank">ME 321: Machine Design</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE320" class="btn" target="_blank">MTE 320: Power Electronics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE325" class="btn" target="_blank">MTE 325: Microprocessor Systems</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE351" class="btn" target="_blank">SYDE 351: Systems Models</a><br>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="term">
-                            <h4>2B | Fall 2016</h4>
+                            <h4>Software/Math</h4>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE241" class="btn" target="_blank">MTE 241: Computer Structures & Real-Time Systems</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE325" class="btn" target="_blank">MTE 325: Microprocessor Systems & Mechatronics Interfacing</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE140" class="btn" target="_blank">MTE 140: Data Structures & Algorithms</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE203" class="btn" target="_blank">MTE 203: Advanced Calculus</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE204" class="btn" target="_blank">MTE 204: Numerical Methods</a><br>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="term">
+                            <h4>Electrical</h4>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE360" class="btn" target="_blank">MTE 360: Automatic Control Systems</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE320" class="btn" target="_blank">MTE 320: Actuators Power Electronics</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE220" class="btn" target="_blank">MTE 220: Sensors and Instrumentation</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE241" class="btn" target="_blank">MTE 241: Real-Time Systems</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE252" class="btn" target="_blank">SYDE 252: Linear Systems and Signals</a>
-                        </div>
-                    </div>
-                </div><br>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="term">
-                            <h4>2A | Winter 2015</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE201" class="btn" target="_blank">MTE 201: Statistics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE202" class="btn" target="_blank">MTE 202: Ordinary Differential Equations</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE219" class="btn" target="_blank">MTE 219: Mechanics of Deformable Solids</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE252" class="btn" target="_blank">SYDE 252: Linear Systems and Signals</a><br>
                             <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE262" class="btn" target="_blank">MTE 262: Microprocessors & Digital Logic</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE182" class="btn" target="_blank">SYDE 182: Dynamics</a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="term term-middle">
-                            <h4>1B | Summer 2014</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MATH.html#MATH118" class="btn" target="_blank">MATH 118: Calculus 2 for Engineering</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE111" class="btn" target="_blank">MTE 111: Material Science</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE119" class="btn" target="_blank">MTE 119: Statics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE120" class="btn" target="_blank">MTE 120: Circuits</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE140" class="btn" target="_blank">MTE 140: Data Structures & Algorithms</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
                         <div class="term">
-                            <h4>1A | Fall 2013</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-CHE.html#CHE102" class="btn" target="_blank">CHE 102: Chemistry for Engineers</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-GENE.html#GENE121" class="btn" target="_blank">GENE 121: Digital Computation</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MATH.html#MATH115" class="btn" target="_blank">MATH 115: Linear Algebra</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MATH.html#MATH116" class="btn" target="_blank">MATH 116: Calculus 1</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE100" class="btn" target="_blank">MTE 100:  Mechatronics Engineering</a>
+                            <h4>Mechanical</h4>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME351" class="btn" target="_blank">ME 351: Fluid Mechanics</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME321" class="btn" target="_blank">ME 321: Kinematics & Dynamics of Machines</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ECE.html#ECE309" class="btn" target="_blank">ECE 309: Thermodynamics & Heat Transfer</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE219" class="btn" target="_blank">MTE 219: Mechanics of Deformable Solids</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE111" class="btn" target="_blank">MTE 111: Material Science for Engineers</a><br>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="term">
+                            <h4>Other</h4>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE380" class="btn" target="_blank">MTE 380: Mechatronics Engineering Design Workshop</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE322" class="btn" target="_blank">MTE 322: Electromechanical Machine Design</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE351" class="btn" target="_blank">SYDE 351: Systems Models</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MSCI.html#MSCI261" class="btn" target="_blank">MSCI 261: Engineering Economics</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE201" class="btn" target="_blank">MTE 201: Experimental Measurement & Statistical Analysis</a><br>
                         </div>
                     </div>
                 </div>
