Replaced headshot with professional photo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                 <h2>Hi! Thanks for visiting.</h2>
                 <p>I'm Kieran Broekhoven, a student of engineering. In mechatronics I study software, hardware and mechanical design. I'm currently in my third of four years of Mechatronics Engineering.</p>
-                <img src="face.jpg" class="img-responsive center-block"><br>
+                <img src="face.jpg" class="img-responsive center-block face"><br>
                 <p>I take pride in writing powerful, robust and clean software ranging from robotics to web applications. I am actively involved at the University of Waterloo, and spend my spare time as a musician, actor and athlete.</p>
                 </div>
             </div>
