--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <h1 class="brand-heading">Kieran Broekhoven</h1>
-                            <p class="intro-text">Performer | Mechatronics Engineer | Adventurer</p>
+                            <p class="intro-text">Performer | Mechatronics Engineering Student | Adventurer</p>
                             <a href="#about" class="btn btn-default page-scroll">
                                 <i class="fa fa-angle-double-down animated"></i>Hi!
                             </a>
@@ -71,9 +71,17 @@
                 <div class="col-lg-8 col-lg-offset-2"><br>
                     <div class="panel-group" id="accordion">
                         <div class="panel">
+                            <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#S17">Software Developer | Apple Inc. Special Projects | Summer 2017</a></p>
+                            <div id="S17" class="panel-collapse collapse">
+                                For my sixth co-op term, I worked at a special projects division of <a href="http://www.apple.com" target="_blank">Apple</a> as a part of the Test Automation team.
+                                <br><br>
+                                I assisted development of a test automation framework for a real-time embedded system, creating new features and debugging failures. I was also independently responsible for designing and implementing a diagnostics library in Python for a hardware communication system, and generally automating various test processes with Python and Bash scripts.
+                            </div>
+                        </div>
+                        <div class="panel">
                             <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#F16">Software Developer | IGNIS Innovation | Fall 2016</a></p>
                             <div id="F16" class="panel-collapse collapse">
-                                For my fifth and most recent co-op term, I worked at <a href="http://www.ignisinnovation.com" target="_blank">IGNIS Innovation</a>, a small company in Waterloo that designs various technologies for AMOLED (Active Matrix Organic Light Emitting Diode) displays. At IGNIS I was primilarly focussed on application design.
+                                For my fifth co-op term, I worked at <a href="http://www.ignisinnovation.com" target="_blank">IGNIS Innovation</a>, a small company in Waterloo that designs various technologies for AMOLED (Active Matrix Organic Light Emitting Diode) displays. At IGNIS I was primilarly focussed on application design.
                                 <br><br>
                                 Working on IGNIS's product entitled <a href="http://www.ignisinnovation.com/maxlife/" target="_blank">Max | Life</a>, I was responsible for adding various features in both the WinForms and OpenGL aspects of the application. I designed and developed several new controls in C# to expand the funcionality of the application. In OpenGL I expanded several existing features to adapt to the changing needs of clients.
                             </div>
@@ -81,9 +89,9 @@
                         <div class="panel">
                         <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#W16">Test Engineering Analyst (Software) | Clearpath Robotics | Winter 2016</a>
                             <div id="W16" class="panel-collapse collapse">
-                                For my fourth co-op term, I worked at <a href="http://clearpath.ai" target="_blank">Clearpath Robotics</a>. Clearpath is a robotics company that focuses on autonomous navigation in industrial application as well as robotics for research platforms.
+                                For my fourth co-op term, I worked at <a href="http://clearpath.ai" target="_blank">Clearpath</a>, a robotics company in Kitchener that focuses on autonomous navigation in industrial applications as well as robotics for research platforms.
                                 <br><br>
-                                At Clearpath I was a member of the Test and Infrastructure team, as the Test Engineering Analyst Co-op. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. This included creating extensions to <a href="https://sentry.io" target="_blank">Sentry</a>, a crash reporting system, as well as several parsing and automation scripts. A significant project I completed was to design a failure monitoring system for Clearpath's robot fleet manager.
+                                At Clearpath I was a member of the Test and Infrastructure team, as a Test Engineering Analyst. My tasks were essentially to streamline or eliminate some of the more mundane or menial tasks of the test team. This included creating extensions to <a href="https://sentry.io" target="_blank">Sentry</a>, a crash reporting system, as well as several parsing and automation scripts. A significant project I completed was to design a failure monitoring system for Clearpath's robot fleet manager.
                             </div>
                         </div>
                         <div class="panel">
@@ -124,21 +132,23 @@
                     <div class="col-lg-6">
                         <div class="term">
                             <h4>Software/Math</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE241" class="btn" target="_blank">MTE 241: Computer Structures & Real-Time Systems</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE325" class="btn" target="_blank">MTE 325: Microprocessor Systems & Mechatronics Interfacing</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE140" class="btn" target="_blank">MTE 140: Data Structures & Algorithms</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE203" class="btn" target="_blank">MTE 203: Advanced Calculus</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE204" class="btn" target="_blank">MTE 204: Numerical Methods</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE241" class="btn" target="_blank">MTE 241: Computer Structures & Real-Time Systems</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE325" class="btn" target="_blank">MTE 325: Microprocessor Systems & Mechatronics Interfacing</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-SYDE.html#SYDE575" class="btn" target="_blank">SYDE 575: Image Processing</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE140" class="btn" target="_blank">MTE 140: Data Structures & Algorithms</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE203" class="btn" target="_blank">MTE 203: Advanced Calculus</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE204" class="btn" target="_blank">MTE 204: Numerical Methods</a><br>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="term">
                             <h4>Electrical</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE360" class="btn" target="_blank">MTE 360: Automatic Control Systems</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE320" class="btn" target="_blank">MTE 320: Actuators Power Electronics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE220" class="btn" target="_blank">MTE 220: Sensors and Instrumentation</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE252" class="btn" target="_blank">SYDE 252: Linear Systems and Signals</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE262" class="btn" target="_blank">MTE 262: Microprocessors & Digital Logic</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-ECE.html#ECE484" class="btn" target="_blank">ECE 484: Digital Control Applications</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE360" class="btn" target="_blank">MTE 360: Automatic Control Systems</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE320" class="btn" target="_blank">MTE 320: Actuators Power Electronics</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE220" class="btn" target="_blank">MTE 220: Sensors and Instrumentation</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-SYDE.html#SYDE252" class="btn" target="_blank">SYDE 252: Linear Systems and Signals</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE262" class="btn" target="_blank">MTE 262: Microprocessors & Digital Logic</a><br>
                         </div>
                     </div>
                 </div>
@@ -146,21 +156,21 @@
                     <div class="col-lg-6">
                         <div class="term">
                             <h4>Mechanical</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME351" class="btn" target="_blank">ME 351: Fluid Mechanics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ME.html#ME321" class="btn" target="_blank">ME 321: Kinematics & Dynamics of Machines</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-ECE.html#ECE309" class="btn" target="_blank">ECE 309: Thermodynamics & Heat Transfer</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE219" class="btn" target="_blank">MTE 219: Mechanics of Deformable Solids</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE111" class="btn" target="_blank">MTE 111: Material Science for Engineers</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-ME.html#ME351" class="btn" target="_blank">ME 351: Fluid Mechanics</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-ME.html#ME321" class="btn" target="_blank">ME 321: Kinematics & Dynamics of Machines</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-ECE.html#ECE309" class="btn" target="_blank">ECE 309: Thermodynamics & Heat Transfer</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE219" class="btn" target="_blank">MTE 219: Mechanics of Deformable Solids</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE111" class="btn" target="_blank">MTE 111: Material Science for Engineers</a><br>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="term">
                             <h4>Other</h4>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE380" class="btn" target="_blank">MTE 380: Mechatronics Engineering Design Workshop</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE322" class="btn" target="_blank">MTE 322: Electromechanical Machine Design</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-SYDE.html#SYDE351" class="btn" target="_blank">SYDE 351: Systems Models</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MSCI.html#MSCI261" class="btn" target="_blank">MSCI 261: Engineering Economics</a><br>
-                            <a href="http://www.ucalendar.uwaterloo.ca/1617/COURSE/course-MTE.html#MTE201" class="btn" target="_blank">MTE 201: Experimental Measurement & Statistical Analysis</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE380" class="btn" target="_blank">MTE 380: Mechatronics Engineering Design Workshop</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE544" class="btn" target="_blank">MTE 544: Autonomous Mobile Robotics</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE322" class="btn" target="_blank">MTE 322: Electromechanical Machine Design</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-SYDE.html#SYDE351" class="btn" target="_blank">SYDE 351: Systems Models</a><br>
+                            <a href="http://www.ucalendar.uwaterloo.ca/1718/COURSE/course-MTE.html#MTE201" class="btn" target="_blank">MTE 201: Experimental Measurement & Statistical Analysis</a><br>
                         </div>
                     </div>
                 </div>
@@ -173,12 +183,12 @@
                     <div class="col-lg-6">
                         <div class="hovereffect">
                             <img src="engsoc.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>I have been heavily involved with the <a href="http://engsoc.uwaterloo.ca" target="_blank">Engineering Society</a> at Waterloo since I started. I served 16 months as the VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events and other volunteer roles.</p></div>
+                            <div class="overlay"><p>I have been heavily involved with student life at Waterloo since I started my education. I served 16 months as the Engineering Society VP External, sitting on the Engineering Student Societies' Council of Ontario and the Canadian Federation of Engineering Students. My other positions within EngSoc have included Speaker, chair of the Board of Directors, director of several events and other volunteer roles.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="guitar.jpg" class="img-responsive interests-img">
+                            <img src="HFAR.png" class="img-responsive interests-img">
                             <div class="overlay"><p>Music has been a big part of my life for a long time - I'm most likely to be found <a href="https://drive.google.com/file/d/0B3lw0vFsNbkFNFgxbFRBYVBXU3M/view?usp=sharing" target="_blank">playing in a band</a> or messing around with some friends. I play guitar, piano, bass, drums and several other percussion instruments.</p></div>
                         </div>
                     </div>
@@ -186,8 +196,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hovereffect">
-                            <img src="fiddler_russians.jpg" class="img-responsive interests-img">
-                            <div class="overlay"><p>In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a part of the Engineering play, Fiddler on the Roof, and The Music Man.</p></div>
+                            <img src="trombones.jpg" class="img-responsive interests-img">
+                            <div class="overlay"><p>In high school I was the director and lead actor of my high school's performances at the Ontario Sears Drama Festival. I also was part of my high school's productions of The Secret Garden and Phantom of the Opera. Here at Waterloo I have been a director of the Engineering Play, cast member of Fiddler on the Roof, and choreographer The Music Man.</p></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
