Edited Apple job title

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-8 col-lg-offset-2"><br>
                     <div class="panel-group" id="accordion">
                         <div class="panel">
-                            <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#S17">Software Developer | Apple Inc. Special Projects | Summer 2017</a></p>
+                            <p><a class="btn btn-default" data-toggle="collapse" data-parent="#accordion" href="#S17">Test Automation Developer | Apple Inc. Special Projects | Summer 2017</a></p>
                             <div id="S17" class="panel-collapse collapse">
                                 For my sixth co-op term, I worked at a special projects division of <a href="http://www.apple.com" target="_blank">Apple</a> as a part of the Test Automation team.
                                 <br><br>
